# FsHighwaySort

./: Directory.Build.props  FsHighwaySort.sln  HighwaySort.sln  README.md
FsHighwaySort/: .gitignore
FsHighwaySort/.github/workflows/: ci.yml
eng/: pack.sh  stage-native-linux.sh  stage-native-windows.ps1
src/FsHighwaySort.Benchmark/: FsHighwaySort.Benchmark.fsproj  Program.fs
src/FsHighwaySort.Interop/: FsHighwaySort.Interop.fsproj  HighwayNative.fs
src/FsHighwaySort.Native/: CMakeLists.txt
src/FsHighwaySort.Native.Runtime/: FsHighwaySort.Native.Runtime.csproj
src/FsHighwaySort.Native/include/: highway_sort_wrapper.h
src/FsHighwaySort.Native/src/: highway_sort_wrapper.cc
src/HighwaySort.Benchmark/: HighwaySort.Benchmark.fsproj  Program.fs
src/HighwaySort.Interop/: HighwayNative.fs  HighwaySort.Interop.fsproj
src/HighwaySort.Native.Runtime/: HighwaySort.Native.Runtime.csproj
src/HighwaySort.Native/src/: highway_sort_wrapper.cc
